<resources>
    <string name="app_name">SeeAble</string>
    <string name="map_key" translatable="false">AIzaSyBsTGyPIQmdXk_SqIa5q-DkBDvakeqv6-E</string>
    <string name="title_register">Register for Blind</string>
    <string name="finish_button">Finish</string>
    <string name="header_regis_blind">Register\'s Blind</string>
    <string name="header_regis_person">Register\'s Caretaker</string>
    <string name="txt_username_register">Tel Number</string>
    <string name="txt_password_register">Password</string>
    <string name="txt_fullname_register">Full Name</string>
    <string name="txt_phone">Tel. Number</string>
    <string name="txt_name_caretaker">Caretaker\'s name</string>
    <string name="txt_phone_caretaker">Caretaker\'s phone</string>
    <string name="blinder_button_desc">Blind</string>
    <string name="person_button_desc">Caretaker</string>
    <string name="loading_spinner">Loading...</string>
    <string name="button_self_navigation">Self-Navigate</string>
    <string name="button_caretaker_navigation">Caretaker-Navigate</string>
    <string name="button_emergency_call">Call Emergency</string>
    <string name="button_shared_locatoin">Send Location</string>
    <string name="locatoin_null">Please set your location before use Navigation.</string>
    <string name="check_setName">Please fill your name.</string>
    <string name="enable_notifications_access">Please Enable Notification Access at Seeable.</string>
    <string name="header_SettingBlind">Setting</string>
    <string name="button_change_language_blind">Languages</string>
    <string name="button_account">Account</string>
    <string name="button_set_location">Set Location</string>
    <string name="button_manage_user">Manage Caretaker User</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_log_out_blind">Log out</string>
    <string name="header_SettingCaretaker">Setting</string>
    <string name="button_change_language_caretaker">Languages</string>
    <string name="button_blind_list_caretaker">Blind List</string>
    <string name="button_account_setting">Account Setting</string>
    <string name="button_about">About</string>
    <string name="button_log_out_caretaker">Logout</string>
    <string name="header_AccountSettingCaretaker">Account setting</string>
    <string name="button_edit_displayName_caretaker">Edit Display name</string>
    <string name="button_change_password_caretaker">Change password</string>
    <string name="button_delete_account_caretaker">Delete Account</string>
    <string name="header_AccountSettingEditCaretaker">Edit Display name</string>
    <string name="edit_displayName_AccountSettingEditCaretaker">Display Name</string>
    <string name="empty_displayName_AccountSettingEditCaretaker">Please! enter your display name</string>
    <string name="successfully_AccountSettingEditCaretaker">Display name changed successfully!</string>
    <string name="save_AccountSettingEditCaretaker">Save</string>
    <string name="header_AccountSettingChangePasswordCaretaker">Change password</string>
    <string name="edit_oldPassword_AccountSettingChangePasswordCaretaker">Old password</string>
    <string name="edit_newPassword_AccountSettingChangePasswordCaretaker">New password</string>
    <string name="edit_confirm_AccountSettingChangePasswordCaretaker">Confirm password</string>
    <string name="save_AccountSettingChangePasswordCaretaker">Save</string>
    <string name="header_AccountSettingDeleteCaretaker">Delete Account</string>
    <string name="subheader_AccountSettingEditCaretaker">Caution</string>
    <string name="info_AccountSettingEditCaretaker">Are you really sure to delete the account?
        If you delete account, you will lost all of your progress and data. Type your password and
        press “Delete account” to confirm</string>
    <string name="wrong_password_AccountSettingEditCaretaker">Password is incorrect</string>
    <string name="empty_password_AccountSettingEditCaretaker">Please! enter your password</string>
    <string name="delete_AccountSettingEditCaretaker">Delete account</string>
    <string name="header_BlindListCaretaker">Blind list</string>
    <string name="add_BlindListCaretaker">+ ADD</string>
    <string name="header_AddBlindUser">Add new blind</string>
    <string name="button_AddBlindUser">Send OTP</string>
    <string name="empty_AddBlindUser">Please enter phone</string>
    <string name="txt_AddBlindUser">To add new blind, type blind’s number to receive 6-digit OTP code via SMS.
        Then enter the OTP code to confirm request.</string>
    <string name="header_VerificationBlindFragment">OTP Confirmation</string>
    <string name="subHeader_VerificationBlindFragment">Please enter 6 digit OTP from blind’s phone to confirm to add new blind</string>
    <string name="button_VerificationBlindFragment">Submit</string>
    <string name="header_BlindInformationFragment">Blind Information</string>
    <string name="name_BlindInformationFragment">Name : </string>
    <string name="displayName_BlindInformationFragment"> not found! </string>
    <string name="phone_BlindInformationFragment">Phone : 012XXXXXXX</string>
    <string name="role_BlindInformationFragment">Role : Blind</string>
    <string name="nav_BlindInformationFragment">Navigation List</string>
    <string name="add_BlindInformationFragment">ADD +</string>
    <string name="update_empty_BlindInformationFragment">Please fill your new name.</string>
    <string name="update_same_BlindInformationFragment">The new name can\'t be the same as your old name.</string>
    <string name="update_success_BlindInformationFragment">Update name successfully.</string>
    <string name="edit_blind_BlindInformationFragment">you can\'t edit this blind destination.</string>
    <string name="delete_blind_BlindInformationFragment">you can\'t delete this blind destination.</string>
    <string name="header_NavigationEditFragment">Navigation Edit</string>
    <string name="header_AccountBlind">Account Setting</string>
    <string name="name_AccountBlind">Name : </string>
    <string name="displayName_AccountBlind">not found ! </string>
    <string name="phone_AccountBlind">Phone : 012XXXXXXX</string>
    <string name="role_AccountBlind">Role : Blind</string>
    <string name="btn_edit_AccountBlind">Edit name</string>
    <string name="btn_pass_AccountBlind">Change password</string>
    <string name="btn_delete_AccountBlind">Delete user</string>
    <string name="header_editDisplayName">Edit name</string>
    <string name="hint_editDisplayName"> username</string>
    <string name="btn_editDisplayName">Save</string>
    <string name="check_same_editDisplayName">Old name and new name cannot be same</string>
    <string name="check_null_editDisplayName">Please enter new name</string>
    <string name="header_ChangePassword">Change password</string>
    <string name="text_currentPassword">Current password</string>
    <string name="text_newPassword">New password</string>
    <string name="btn_ChangePassword">Save</string>
    <string name="required_ChangePassword">(Required)</string>
    <string name="checkNull_current_ChangePassword">Please fill your current password.</string>
    <string name="checkNull_new_ChangePassword">Please fill your new password.</string>
    <string name="check_current_ChangePassword">Your current password is incorrect.</string>
    <string name="check_new_ChangePassword">The new password cannot be the same as the old password.</string>
    <string name="old_empty_ChangePassword"> Please! fill your old password </string>
    <string name="new_empty_ChangePassword">Please! fill your new password</string>
    <string name="confirm_empty_ChangePassword">Please! fill your confirm password</string>
    <string name="old_incorrect_ChangePassword">your old password is incorrect</string>
    <string name="newPassword_incorrect_ChangePassword">The new password does not match the confirmation</string>
    <string name="password_same_ChangePassword">New password must difference from old password</string>
    <string name="successfully_ChangePassword">Password changed successfully!</string>
    <string name="header_DeleteAccountBlind">Delete account</string>
    <string name="subheader_DeleteAccountBlind">Caution</string>
    <string name="warning_DeleteAccountBlind">Are you really sure to delete the account?
        If you delete account, you will lost all of your progress and data. Type your password and
        press “Delete account” to confirm</string>
    <string name="hint_DeleteAccountBlind">Password...</string>
    <string name="btn_DeleteAccountBlind">Delete account</string>
    <string name="checkPassword_DeleteAccountBlind">Your password is incorrect.</string>
    <string name="header_SendOTP">Registration</string>
    <string name="subheader_SendOTP">Please type your phone number to register. The app will send OTP code to confirm the account</string>
    <string name="button_SendOTP">Send OTP</string>
    <string name="empty_SendOTP">Enter Phone</string>
    <string name="completed_SendOTP">Verification completed</string>
    <string name="failed_SendOTP">Verification failed</string>
    <string name="sent_SendOTP">Code sent</string>
    <string name="header_VerifyOTP">OTP Confirmation</string>
    <string name="subHeader_VerifyOTP">Please enter 6 digit OTP in your phone to proceed</string>
    <string name="empty_VerifyOTP">Please Enter verification code</string>
    <string name="button_VerifyOTP">Submit</string>
    <string name="incorrect_VerifyOTP">Incorrect OTP</string>
    <string name="header_LittleMore">Little more...</string>
    <string name="subheader_LittleMore">Select mode</string>
    <string name="set_password_LittleMore">Set your password</string>
    <string name="blind_LittleMore">Blind</string>
    <string name="care_LittleMore">Caretaker</string>
    <string name="hint_LittleMore">Password...</string>
    <string name="btn_LittleMore">Register</string>
    <string name="empty_LittleMore">Please fill your password</string>
    <string name="select_LittleMore">Please Select mode</string>
    <string name="select_register_header">Choose Section</string>
    <string name="select_register_subheader">What’s phone’s owner role ?</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_change_language">Change Language</string>
    <string name="action_other">Other</string>
    <string name="action_delete_home_location">Delete Home Location</string>
    <string name="Login_heading">LOGIN</string>
    <string name="or">or</string>
    <string name="register_login_button">Sign up</string>
    <string name="deleteBlind_header">Delete</string>
    <string name="deleteBlind_subHeader">Do you want to remove this user from the blind list?</string>
    <string name="deleteBlind_confirm">Confirm</string>
    <string name="deleteBlind_cancel">Cancel</string>
    <string name="homeLocation_header">Home Location</string>
    <string name="homeLocation_subHeader">So that you can use this application most effectively.
        Please set up your home address before starting to use the rest of the app.
    </string>
    <string name="homeLocation_text_box">Please set up home address to get started.</string>
    <string name="homeLocation_setup">Set up</string>
    <string name="homeLocation_logoutBtn">Log Out</string>
    <string name="homeLocation_exitBtn">Exit</string>
    <string name="main_blindBtn">Close</string>
    <string name="main_blind_header">Profile</string>
    <string name="main_blind_id">ID :</string>
    <string name="main_blind_username">Username :</string>
    <string name="main_blind_fullName">Full Name :</string>
    <string name="main_blind_phone">Phone :</string>
    <string name="main_blind_name_caretaker">Caretaker\'s name :</string>
    <string name="main_blind_phone_caretaker">Caretaker\'s phone:</string>
</resources>