<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingScreen">

    <Button
        android:id="@+id/close_button"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="X" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:fontFamily="@font/artifika"
        android:text="@string/action_settings"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/action_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_about" />

    <Button
        android:id="@+id/action_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_change_language" />

    <Button
        android:id="@+id/action_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_other" />


</LinearLayout>