<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".settingBlind.EditNameAccountBlind"
android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/colorAccent"
    >

    <!-- Rectangle 27 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/ic_rectangle_27" />

    <TextView
        android:id="@+id/header"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="169dp"
        android:fontFamily="@font/roboto"
        android:text="@string/header_editDisplayName"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/back_button_foreground" />


</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@mipmap/icon_profile_foreground" />

    <TextView
        android:id="@+id/name"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/profile"
        android:text="@string/name_AccountBlind"
        style="@style/AccountBlind_Name"
        />

    <EditText
        android:id="@+id/editDisplayName"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/profile"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:hint="@string/hint_editDisplayName"
        android:background="@drawable/round_corner_button"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:text="@string/phone_AccountBlind"
        style="@style/AccountBlind_Info"
        />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/role_AccountBlind"
        style="@style/AccountBlind_Info"
        />



</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Button
        android:id="@+id/saveNewName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_editDisplayName"
        android:background="@drawable/btn_rectangle_blue"
        style="@style/AccountBlind_Button"
        />

</LinearLayout>

</LinearLayout>